# n-body

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: linmath.h  main.cpp  nBody.cu  nBody.h  renderer.cpp  renderer.hpp
src/shaders/: shader.frag  shader.vert
